add image to grayscale.